Fix favorite button overlapping channel body
Closes #117

--- a/app/styles/components/_channel-card.scss
+++ b/app/styles/components/_channel-card.scss
@@ -1,6 +1,6 @@
 .ChannelCard {
 	position: relative;
-	padding-bottom: 1rem;
+	padding-bottom: 1.5rem;
 	background-color: $superlightgray;
 	border: 1px solid $mediumlightgray;
 	border-radius: $border-radius;
